--- a/jacoco/com.irurueta.server.commons/CommonsException.java.html
+++ b/jacoco/com.irurueta.server.commons/CommonsException.java.html
@@ -1,10 +1,17 @@
-<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../.resources/report.css" type="text/css"/><link rel="shortcut icon" href="../.resources/report.gif" type="image/gif"/><title>CommonsException.java</title><link rel="stylesheet" href="../.resources/prettify.css" type="text/css"/><script type="text/javascript" src="../.resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../.sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">server-commons</a> &gt; <a href="index.source.html" class="el_package">com.irurueta.server.commons</a> &gt; <span class="el_source">CommonsException.java</span></div><h1>CommonsException.java</h1><pre class="source lang-java linenums">/**
- * @file
- * This file contains implementation of
- * com.irurueta.server.commons.CommonsException
- * 
- * @author Alberto Irurueta (alberto@irurueta.com)
- * @date May 25, 2013
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../.resources/report.css" type="text/css"/><link rel="shortcut icon" href="../.resources/report.gif" type="image/gif"/><title>CommonsException.java</title><link rel="stylesheet" href="../.resources/prettify.css" type="text/css"/><script type="text/javascript" src="../.resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../.sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">irurueta-server-commons</a> &gt; <a href="index.source.html" class="el_package">com.irurueta.server.commons</a> &gt; <span class="el_source">CommonsException.java</span></div><h1>CommonsException.java</h1><pre class="source lang-java linenums">/**
+ * Copyright (C) 2016 Alberto Irurueta Carro (alberto@irurueta.com)
+ *
+ * Licensed under the Apache License, Version 2.0 (the &quot;License&quot;);
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *         http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an &quot;AS IS&quot; BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 package com.irurueta.server.commons;
 
@@ -17,16 +24,16 @@ public class CommonsException extends Exception{
      * Constructor
      */
     public CommonsException(){
-<span class="fc" id="L20">        super();</span>
-<span class="fc" id="L21">    }</span>
+<span class="fc" id="L27">        super();</span>
+<span class="fc" id="L28">    }</span>
 
     /**
      * Constructor with String containing message
      * @param message Message indicating the cause of the exception
      */
     public CommonsException(String message){
-<span class="fc" id="L28">        super(message);</span>
-<span class="fc" id="L29">    }</span>
+<span class="fc" id="L35">        super(message);</span>
+<span class="fc" id="L36">    }</span>
 
     /**
      * Constructor with message and cause
@@ -34,15 +41,15 @@ public class CommonsException extends Exception{
      * @param cause Instance containing the cause of the exception
      */
     public CommonsException(String message, Throwable cause){
-<span class="fc" id="L37">        super(message, cause);</span>
-<span class="fc" id="L38">    }</span>
+<span class="fc" id="L44">        super(message, cause);</span>
+<span class="fc" id="L45">    }</span>
 
     /**
      * Constructor with cause
      * @param cause Instance containing the cause of the exception
      */
     public CommonsException(Throwable cause){
-<span class="fc" id="L45">        super(cause);</span>
-<span class="fc" id="L46">    }                    </span>
+<span class="fc" id="L52">        super(cause);</span>
+<span class="fc" id="L53">    }                    </span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.eclemma.org/jacoco">JaCoCo</a> 0.7.6.201602180812</span></div></body></html>
