Creating site for 1.0-SNAPSHOT

--- a/jacoco/com.irurueta.server.commons/BuildInfo.java.html
+++ b/jacoco/com.irurueta.server.commons/BuildInfo.java.html
@@ -33,7 +33,7 @@ public class BuildInfo {
      * This class logger.
      */
 <span class="fc" id="L35">    private static final Logger LOGGER = Logger.getLogger(</span>
-<span class="fc" id="L36">            BuildInfo.class.getName());</span>
+            BuildInfo.class.getName());
     
     /**
      * Location of properties file that contains build data.
