--- a/jacoco/com.irurueta.server.commons.configuration/ConfigurationException.java.html
+++ b/jacoco/com.irurueta.server.commons.configuration/ConfigurationException.java.html
@@ -18,38 +18,39 @@ package com.irurueta.server.commons.configuration;
 /**
  * Raised if something fails during configuration process.
  */
-public class ConfigurationException extends Exception{
+@SuppressWarnings(&quot;WeakerAccess&quot;)
+public class ConfigurationException extends Exception {
 
     /**
      * Constructor.
      */
-    public ConfigurationException(){
-<span class="fc" id="L27">        super();</span>
-<span class="fc" id="L28">    }</span>
+    public ConfigurationException() {
+<span class="fc" id="L28">        super();</span>
+<span class="fc" id="L29">    }</span>
 
     /**
      * Constructor with String containing message.
      * @param message Message indicating the cause of the exception.
-     */    
-    public ConfigurationException(String message){
-<span class="fc" id="L35">        super(message);</span>
-<span class="fc" id="L36">    }</span>
+     */
+    public ConfigurationException(String message) {
+<span class="fc" id="L36">        super(message);</span>
+<span class="fc" id="L37">    }</span>
 
     /**
      * Constructor with message and cause.
      * @param message Message describing the cause of the exception.
      * @param cause Instance containing the cause of the exception.
-     */    
-    public ConfigurationException(String message, Throwable cause){
-<span class="fc" id="L44">        super(message, cause);</span>
-<span class="fc" id="L45">    }</span>
+     */
+    public ConfigurationException(String message, Throwable cause) {
+<span class="fc" id="L45">        super(message, cause);</span>
+<span class="fc" id="L46">    }</span>
 
     /**
      * Constructor with cause.
      * @param cause Instance containing the cause of the exception.
      */    
-    public ConfigurationException(Throwable cause){
-<span class="fc" id="L52">        super(cause);</span>
-<span class="fc" id="L53">    }            </span>
+    public ConfigurationException(Throwable cause) {
+<span class="fc" id="L53">        super(cause);</span>
+<span class="fc" id="L54">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.eclemma.org/jacoco">JaCoCo</a> 0.7.6.201602180812</span></div></body></html>
