--- a/jacoco/com.irurueta.server.commons/CommonsException.java.html
+++ b/jacoco/com.irurueta.server.commons/CommonsException.java.html
@@ -19,37 +19,38 @@ package com.irurueta.server.commons;
  * Base exception class for this package.
  * All exceptions in this package extends from this one.
  */
-public class CommonsException extends Exception{
+@SuppressWarnings(&quot;WeakerAccess&quot;)
+public class CommonsException extends Exception {
     /**
-     * Constructor
+     * Constructor.
      */
-    public CommonsException(){
-<span class="fc" id="L27">        super();</span>
-<span class="fc" id="L28">    }</span>
+    public CommonsException() {
+<span class="fc" id="L28">        super();</span>
+<span class="fc" id="L29">    }</span>
 
     /**
-     * Constructor with String containing message
-     * @param message Message indicating the cause of the exception
+     * Constructor with String containing message.
+     * @param message Message indicating the cause of the exception.
      */
-    public CommonsException(String message){
-<span class="fc" id="L35">        super(message);</span>
-<span class="fc" id="L36">    }</span>
+    public CommonsException(String message) {
+<span class="fc" id="L36">        super(message);</span>
+<span class="fc" id="L37">    }</span>
 
     /**
-     * Constructor with message and cause
-     * @param message Message describing the cause of the exception
-     * @param cause Instance containing the cause of the exception
+     * Constructor with message and cause.
+     * @param message Message describing the cause of the exception.
+     * @param cause Instance containing the cause of the exception.
      */
-    public CommonsException(String message, Throwable cause){
-<span class="fc" id="L44">        super(message, cause);</span>
-<span class="fc" id="L45">    }</span>
+    public CommonsException(String message, Throwable cause) {
+<span class="fc" id="L45">        super(message, cause);</span>
+<span class="fc" id="L46">    }</span>
 
     /**
-     * Constructor with cause
-     * @param cause Instance containing the cause of the exception
+     * Constructor with cause.
+     * @param cause Instance containing the cause of the exception.
      */
-    public CommonsException(Throwable cause){
-<span class="fc" id="L52">        super(cause);</span>
-<span class="fc" id="L53">    }                    </span>
+    public CommonsException(Throwable cause) {
+<span class="fc" id="L53">        super(cause);</span>
+<span class="fc" id="L54">    }                    </span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.eclemma.org/jacoco">JaCoCo</a> 0.7.6.201602180812</span></div></body></html>
