Creating site for 1.0-SNAPSHOT

--- a/surefire-report.html
+++ b/surefire-report.html
@@ -117,12 +117,12 @@ function toggleDisplay(elementId) {
 <th>Success Rate</th>
 <th>Time</th></tr>
 <tr class="b">
-<td>7</td>
+<td>12</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>0.167</td></tr></table><br />
+<td>0.253</td></tr></table><br />
 <p>Note: failures are anticipated and checked for with assertions while errors are unanticipated.</p><br /></div>
 <div class="section">
 <h2>Package List<a name="Package_List"></a></h2><a name="Package_List"></a>
@@ -143,15 +143,15 @@ function toggleDisplay(elementId) {
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>0.025</td></tr>
+<td>0.03</td></tr>
 <tr class="a">
 <td><a href="#com.irurueta.server.commons.configuration">com.irurueta.server.commons.configuration</a></td>
-<td>3</td>
+<td>8</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>0.142</td></tr></table><br />
+<td>0.223</td></tr></table><br />
 <p>Note: package statistics are not computed recursively, they only sum up all of its testsuites numbers.</p>
 <div class="section">
 <h3>com.irurueta.server.commons<a name="com.irurueta.server.commons"></a></h3><a name="com.irurueta.server.commons"></a>
@@ -173,7 +173,7 @@ function toggleDisplay(elementId) {
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>0.018</td></tr>
+<td>0.025</td></tr>
 <tr class="a">
 <td><a href="#com.irurueta.server.commonsLockedExceptionTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
 <td><a href="#com.irurueta.server.commonsLockedExceptionTest">LockedExceptionTest</a></td>
@@ -182,7 +182,7 @@ function toggleDisplay(elementId) {
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>0.004</td></tr>
+<td>0.003</td></tr>
 <tr class="b">
 <td><a href="#com.irurueta.server.commonsCommonsExceptionTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
 <td><a href="#com.irurueta.server.commonsCommonsExceptionTest">CommonsExceptionTest</a></td>
@@ -191,7 +191,7 @@ function toggleDisplay(elementId) {
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>0.003</td></tr></table></div>
+<td>0.002</td></tr></table></div>
 <div class="section">
 <h3>com.irurueta.server.commons.configuration<a name="com.irurueta.server.commons.configuration"></a></h3><a name="com.irurueta.server.commons.configuration"></a>
 <table border="1" class="bodyTable">
@@ -205,6 +205,15 @@ function toggleDisplay(elementId) {
 <th>Success Rate</th>
 <th>Time</th></tr>
 <tr class="b">
+<td><a href="#com.irurueta.server.commons.configurationConfigurationFactoryTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
+<td><a href="#com.irurueta.server.commons.configurationConfigurationFactoryTest">ConfigurationFactoryTest</a></td>
+<td>5</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>100%</td>
+<td>0.183</td></tr>
+<tr class="a">
 <td><a href="#com.irurueta.server.commons.configurationConfigurationExceptionTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
 <td><a href="#com.irurueta.server.commons.configurationConfigurationExceptionTest">ConfigurationExceptionTest</a></td>
 <td>1</td>
@@ -212,8 +221,8 @@ function toggleDisplay(elementId) {
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>0.115</td></tr>
-<tr class="a">
+<td>0.009</td></tr>
+<tr class="b">
 <td><a href="#com.irurueta.server.commons.configurationPropertiesFileLocatorTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
 <td><a href="#com.irurueta.server.commons.configurationPropertiesFileLocatorTest">PropertiesFileLocatorTest</a></td>
 <td>2</td>
@@ -221,24 +230,47 @@ function toggleDisplay(elementId) {
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>0.027</td></tr></table></div><br /></div>
+<td>0.031</td></tr></table></div><br /></div>
 <div class="section">
 <h2>Test Cases<a name="Test_Cases"></a></h2><a name="Test_Cases"></a>
 <p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p>
+<div class="section">
+<h3>ConfigurationFactoryTest<a name="ConfigurationFactoryTest"></a></h3><a name="com.irurueta.server.commons.configurationConfigurationFactoryTest"></a>
+<table border="1" class="bodyTable">
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_com.irurueta.server.commons.configuration.ConfigurationFactoryTest.testRegisterAndUnregister"></a>testRegisterAndUnregister</td>
+<td>0.005</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_com.irurueta.server.commons.configuration.ConfigurationFactoryTest.testReset"></a>testReset</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_com.irurueta.server.commons.configuration.ConfigurationFactoryTest.testConfigure"></a>testConfigure</td>
+<td>0</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_com.irurueta.server.commons.configuration.ConfigurationFactoryTest.testReconfigure"></a>testReconfigure</td>
+<td>0.006</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_com.irurueta.server.commons.configuration.ConfigurationFactoryTest.testGetInstance"></a>testGetInstance</td>
+<td>0</td></tr></table></div>
 <div class="section">
 <h3>ConfigurationExceptionTest<a name="ConfigurationExceptionTest"></a></h3><a name="com.irurueta.server.commons.configurationConfigurationExceptionTest"></a>
 <table border="1" class="bodyTable">
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_com.irurueta.server.commons.configuration.ConfigurationExceptionTest.testConstructor"></a>testConstructor</td>
-<td>0.004</td></tr></table></div>
+<td>0</td></tr></table></div>
 <div class="section">
 <h3>PropertiesFileLocatorTest<a name="PropertiesFileLocatorTest"></a></h3><a name="com.irurueta.server.commons.configurationPropertiesFileLocatorTest"></a>
 <table border="1" class="bodyTable">
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_com.irurueta.server.commons.configuration.PropertiesFileLocatorTest.testLocate"></a>testLocate</td>
-<td>0.024</td></tr>
+<td>0.03</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_com.irurueta.server.commons.configuration.PropertiesFileLocatorTest.testConstructor"></a>testConstructor</td>
@@ -249,7 +281,7 @@ function toggleDisplay(elementId) {
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_com.irurueta.server.commons.BuildInfoTest.testGetters"></a>testGetters</td>
-<td>0.015</td></tr>
+<td>0.024</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_com.irurueta.server.commons.BuildInfoTest.testGetInstance"></a>testGetInstance</td>
