--- a/xref-test/com/irurueta/server/commons/configuration/package-frame.html
+++ b/xref-test/com/irurueta/server/commons/configuration/package-frame.html
@@ -19,6 +19,15 @@
             	<a href="ConfigurationExceptionTest.html" target="classFrame">ConfigurationExceptionTest</a>
           	</li>
           	          	<li>
+            	<a href="ConfigurationFactoryTest.html" target="classFrame">ConfigurationFactoryTest</a>
+          	</li>
+          	          	<li>
+            	<a href="ConfigurationFactoryTest.html" target="classFrame">CustomConfigurationFactory</a>
+          	</li>
+          	          	<li>
+            	<a href="PropertiesFileLocatorTest.html" target="classFrame">CustomServletContext</a>
+          	</li>
+          	          	<li>
             	<a href="PropertiesFileLocatorTest.html" target="classFrame">PropertiesFileLocatorTest</a>
           	</li>
           	      	</ul>
