--- a/xref-test/com/irurueta/server/commons/configuration/package-summary.html
+++ b/xref-test/com/irurueta/server/commons/configuration/package-summary.html
@@ -42,6 +42,21 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="ConfigurationFactoryTest.html" target="classFrame">ConfigurationFactoryTest</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="ConfigurationFactoryTest.html" target="classFrame">CustomConfigurationFactory</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="PropertiesFileLocatorTest.html" target="classFrame">CustomServletContext</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="PropertiesFileLocatorTest.html" target="classFrame">PropertiesFileLocatorTest</a>
               		</td>
             	</tr>
