--- a/jacoco/com.irurueta.server.commons.configuration/BaseConfigurationFactory.java.html
+++ b/jacoco/com.irurueta.server.commons.configuration/BaseConfigurationFactory.java.html
@@ -23,7 +23,7 @@ import java.util.Properties;
  * @param &lt;E&gt; a Configuration subclass.
  */
 @SuppressWarnings(&quot;WeakerAccess&quot;)
-<span class="nc" id="L26">public abstract class BaseConfigurationFactory&lt;E extends Configuration&gt; {</span>
+<span class="fc" id="L26">public abstract class BaseConfigurationFactory&lt;E extends Configuration&gt; {</span>
 
     /**
      * Reference to configuration to be created.
@@ -38,7 +38,7 @@ import java.util.Properties;
      * @throws ConfigurationException if something fails during configuration.
      */
     public E configure() throws ConfigurationException {
-<span class="nc" id="L41">        return configure(null);</span>
+<span class="fc" id="L41">        return configure(null);</span>
     }
 
     /**
@@ -61,8 +61,8 @@ import java.util.Properties;
      */
     public synchronized BaseConfigurationFactory&lt;E&gt; reset()
             throws ConfigurationException {
-<span class="nc" id="L64">        mConfiguration = null;</span>
-<span class="nc" id="L65">        return this;</span>
+<span class="fc" id="L64">        mConfiguration = null;</span>
+<span class="fc" id="L65">        return this;</span>
     }
 
     /**
@@ -71,7 +71,7 @@ import java.util.Properties;
      * @throws ConfigurationException if something fails during configuration.
      */
     public final E reconfigure() throws ConfigurationException {
-<span class="nc" id="L74">        return reset().configure();</span>
+<span class="fc" id="L74">        return reset().configure();</span>
     }
 
     /**
@@ -81,7 +81,7 @@ import java.util.Properties;
      * @throws ConfigurationException if something fails during configuration.
      */
     public final E reconfigure(Properties properties) throws ConfigurationException {
-<span class="nc" id="L84">        return reset().configure(properties);</span>
+<span class="fc" id="L84">        return reset().configure(properties);</span>
     }
 
     /**
@@ -90,7 +90,7 @@ import java.util.Properties;
      * @return current configuration.
      */
     public final synchronized E getConfiguration() {
-<span class="nc" id="L93">        return mConfiguration;</span>
+<span class="fc" id="L93">        return mConfiguration;</span>
     }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.eclemma.org/jacoco">JaCoCo</a> 0.7.6.201602180812</span></div></body></html>
