--- a/jacoco/com.irurueta.server.commons.configuration/PropertiesFileLocator.java.html
+++ b/jacoco/com.irurueta.server.commons.configuration/PropertiesFileLocator.java.html
@@ -149,17 +149,17 @@ public class PropertiesFileLocator&lt;T&gt; {
 
 <span class="fc" id="L150">        LOGGER.log(Level.INFO, &quot;User home folder: {0}&quot;, home);</span>
 
-<span class="pc bpc" id="L152" title="1 of 2 branches missed.">        if (mContext != null) {</span>
+<span class="fc bfc" id="L152" title="All 2 branches covered.">        if (mContext != null) {</span>
             //Attempt to retrieve first properties files in home path with
             //same name as application context
-<span class="nc" id="L155">            String contextPath = mContext.getContextPath();</span>
+<span class="fc" id="L155">            String contextPath = mContext.getContextPath();</span>
             String path;
-<span class="nc bnc" id="L157" title="All 2 branches missed.">            if (!contextPath.isEmpty()) {</span>
-<span class="nc" id="L158">                path = &quot;~&quot; + contextPath + &quot;.properties&quot;;</span>
-<span class="nc" id="L159">                path = path.replaceAll(&quot;~&quot;, home);</span>
+<span class="pc bpc" id="L157" title="1 of 2 branches missed.">            if (!contextPath.isEmpty()) {</span>
+<span class="fc" id="L158">                path = &quot;~&quot; + contextPath + &quot;.properties&quot;;</span>
+<span class="fc" id="L159">                path = path.replaceAll(&quot;~&quot;, home);</span>
 
-<span class="nc" id="L161">                File f = new File(path);</span>
-<span class="nc bnc" id="L162" title="All 2 branches missed.">                if (f.exists()) {</span>
+<span class="fc" id="L161">                File f = new File(path);</span>
+<span class="pc bpc" id="L162" title="1 of 2 branches missed.">                if (f.exists()) {</span>
 <span class="nc" id="L163">                    LOGGER.log(Level.INFO, &quot;Properties file: {0}&quot;, path);</span>
 <span class="nc" id="L164">                    return new FileInputStream(f);</span>
                 }
