--- a/xref-test/allclasses-frame.html
+++ b/xref-test/allclasses-frame.html
@@ -21,6 +21,15 @@
 				<a href="com/irurueta/server/commons/configuration/ConfigurationExceptionTest.html" target="classFrame">ConfigurationExceptionTest</a>
 			</li>
 						<li>
+				<a href="com/irurueta/server/commons/configuration/ConfigurationFactoryTest.html" target="classFrame">ConfigurationFactoryTest</a>
+			</li>
+						<li>
+				<a href="com/irurueta/server/commons/configuration/ConfigurationFactoryTest.html" target="classFrame">CustomConfigurationFactory</a>
+			</li>
+						<li>
+				<a href="com/irurueta/server/commons/configuration/PropertiesFileLocatorTest.html" target="classFrame">CustomServletContext</a>
+			</li>
+						<li>
 				<a href="com/irurueta/server/commons/LockedExceptionTest.html" target="classFrame">LockedExceptionTest</a>
 			</li>
 						<li>
