--- a/distribution-management.html
+++ b/distribution-management.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>com.irurueta:irurueta-server-commons - Project Summary</title>
+    <title>com.irurueta:irurueta-server-commons - Project Distribution Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -57,8 +57,8 @@
                           <a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
             </li>
                       <li class="none">
-                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
-            </li>
+            <strong>Distribution Management</strong>
+          </li>
                       <li class="none">
                           <a href="index.html" title="About">About</a>
             </li>
@@ -78,8 +78,8 @@
                           <a href="source-repository.html" title="Source Code Management">Source Code Management</a>
             </li>
                       <li class="none">
-            <strong>Summary</strong>
-          </li>
+                          <a href="project-summary.html" title="Summary">Summary</a>
+            </li>
               </ul>
         </li>
                                                                                                                                                                                                   <li class="collapsed">
@@ -96,46 +96,10 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>Project Summary<a name="Project_Summary"></a></h2><a name="Project_Summary"></a>
+<h2>Overview<a name="Overview"></a></h2><a name="Overview"></a>
+<p>The following is the distribution management information used by this project.</p>
 <div class="section">
-<h3>Project Information<a name="Project_Information"></a></h3><a name="Project_Information"></a>
-<table border="0" class="bodyTable">
-<tr class="a">
-<th>Field</th>
-<th>Value</th></tr>
-<tr class="b">
-<td>Name</td>
-<td>com.irurueta:irurueta-server-commons</td></tr>
-<tr class="a">
-<td>Description</td>
-<td>Common utility classes for JEE servers</td></tr>
-<tr class="b">
-<td>Homepage</td>
-<td><a class="externalLink" href="https://github.com/albertoirurueta/irurueta-server-commons">https://github.com/albertoirurueta/irurueta-server-commons</a></td></tr></table></div>
-<div class="section">
-<h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a>
-<p>This project does not belong to an organization.</p></div>
-<div class="section">
-<h3>Build Information<a name="Build_Information"></a></h3><a name="Build_Information"></a>
-<table border="0" class="bodyTable">
-<tr class="a">
-<th>Field</th>
-<th>Value</th></tr>
-<tr class="b">
-<td>GroupId</td>
-<td>com.irurueta</td></tr>
-<tr class="a">
-<td>ArtifactId</td>
-<td>irurueta-server-commons</td></tr>
-<tr class="b">
-<td>Version</td>
-<td>1.0-SNAPSHOT</td></tr>
-<tr class="a">
-<td>Type</td>
-<td>jar</td></tr>
-<tr class="b">
-<td>Java Version</td>
-<td>1.7</td></tr></table></div></div>
+<h3>Snapshot Repository - ossrh<a name="Snapshot_Repository_-_ossrh"></a></h3><a name="Snapshot_Repository_-_ossrh"></a><a class="externalLink" href="https://oss.sonatype.org/content/repositories/snapshots">https://oss.sonatype.org/content/repositories/snapshots</a></div></div>
       </div>
     </div>
     <div class="clear">
